Prevent undesired text wrap

--- a/css/index.css
+++ b/css/index.css
@@ -135,6 +135,7 @@ a {
 a[href^="mailto"],
 a[href^="tel"] {
   text-decoration: none;
+  white-space: nowrap;
 }
 
 figure {
